[gd_scene load_steps=2 format=2]

[ext_resource path="res://mod_selection/CreateModPopup.gd" type="Script" id=1]

[node name="CreateModPopup" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -680.0
margin_bottom = -420.0
rect_min_size = Vector2( 632, 332 )
popup_exclusive = true
window_title = "Create a new mod"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 616.0
margin_bottom = 316.0
rect_min_size = Vector2( 600, 300 )

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Title:"

[node name="TitleEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 104.0
margin_right = 600.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true

[node name="AuthorContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 600.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AuthorContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Author:"

[node name="AuthorEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/AuthorContainer"]
margin_left = 104.0
margin_right = 600.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true

[node name="ModVersionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 600.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ModVersionContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Mod version:"

[node name="ModVersionEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ModVersionContainer"]
margin_left = 104.0
margin_right = 600.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true

[node name="LicenseContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LicenseContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "License:"

[node name="LicenseEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/LicenseContainer"]
margin_left = 104.0
margin_right = 600.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "CC BY 4.0,MIT"
caret_blink = true

[node name="DescriptionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 600.0
margin_bottom = 276.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer"]
margin_right = 600.0
margin_bottom = 14.0
text = "Descrioption:"

[node name="DescriptionEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/DescriptionContainer"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 600.0
margin_bottom = 300.0
alignment = 1

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
margin_left = 250.0
margin_right = 291.0
margin_bottom = 20.0
text = "Save"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
margin_left = 295.0
margin_right = 349.0
margin_bottom = 20.0
text = "Cancel"
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
